# HAN2324-MIC5-RTOS

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: controller.hpp  task_manager.hpp
async_uart/include/: UART_streamer.hpp
bgt60/: CMakeLists.txt
bgt60/include/: bgt60ltr11XXX_config.hpp  bgt60ltr11XXX_driver.hpp
bgt60/src/: bgt60ltr11XXX_driver.cpp
config/: FreeRTOSConfig.h  board_defines.h  lv_conf.h  lv_drv_conf.h
motor_driver/: step_motor.hpp
samples/: CMakeLists.txt  sample.h
speaker/: CMakelists.txt
speaker/include/: audio_buffer.hpp  speaker_controller.hpp
src/: CMakeLists.txt  main.c  main.cpp
src/lvgl_hooks/: lv_port_disp.c  lvgl_hooks.c  lvgl_hooks.h
src/ui/images/: ui_img_onderkant_ooglid_png.c  ui_img_vraagteken_png.c
src/ui/screens/: ui_Screen1.c
